# functional-ml

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/tex/: .gitignore  differentiable_programming.tex  functional-ml.bib
haskell/functional-ml/: .gitignore  README.md  functional-ml.cabal
haskell/functional-ml/app/: Main.hs
haskell/functional-ml/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/functional-ml/dist-newstyle/packagedb/ghc-9.6.7/: functional-ml-0.1.0.0-inplace.conf  package.cache
haskell/functional-ml/src/: CoreLibrary.hs
haskell/functional-ml/src/Categories/: FiniteSets.hs
haskell/functional-ml/src/Categories/Sandboxes/: Sandbox00.hs
haskell/functional-ml/src/DerivativeMonads/: ChainRule.hs  DualNumbers.hs  LocalUpdate.hs
haskell/functional-ml/src/PseudoTensorCategories/NonRepresentable/PointConfigurations/: ProximityConstrained.hs
haskell/functional-ml/src/derivative_monads/: ChainRule.hs  DualNumbers.hs  LocalUpdate.hs
haskell/functional-ml/src/trials/: OOPExperiment.hs  TrialMonad.hs
haskell/functional-ml/test/: Main.hs
haskell/functional-ml/test/Categories/: TestFiniteSets.hs
haskell/functional-ml/test/Trials/: TrialMonadTest.hs
python/functional-ml/: .gitignore  README.md  pyproject.toml  requirements.txt
python/functional-ml/src/: __init__.py
python/src/functional-ml/monad-deform/: README.md  __init__.py
