[project]
name = "monad-deform"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TYLERSFOSTER", email = "tylerisnotavailable@gmail.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
