cabal-version:       >=1.10
name:                functional-ml
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules: 
    CoreLibrary,
    DerivativeMonads.ChainRule,
    DerivativeMonads.DualNumbers,
    Trials.TrialMonad
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable functional-ml
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base, functional-ml
  default-language:    Haskell2010

--{
test-suite functional-ml-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >=4.7 && <5,
    functional-ml,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    HUnit,
    QuickCheck
  default-language: Haskell2010
  --}

test-suite trialmonad-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: TrialMonadTest.hs
  build-depends:
    base >=4.7 && <5,
    functional-ml,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    HUnit,
    QuickCheck
  default-language: Haskell2010
