[project]
name = "monad-deform"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TYLERSFOSTER", email = "tylerisnotavailable@gmail.com"},
]
dependencies = ["numpy>=2.2.6", "torch>=2.7.0", "matplotlib>=3.10.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
package-dir = "src"

